# ppi

./: .gitignore  CMakeLists.txt  main.cpp
winapp/: AppWindow.cpp  AppWindow.h  Magnifier.cpp  Magnifier.h  Ppi.cpp  Ppi.h  PpiControl.cpp  PpiControl.h  TopWidget.cpp  TopWidget.h  ppidefs.h
